Feature/dhb 300 update org details (#212)
* Edit Organisation Details functionality added

* Added OrganisationService, and testcases for the new function

* added updated Core.Api.Json

* fix for hn location view failing
